build: open props 의존성 추가

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/publdaze/goorm-missions/issues"
   },
-  "homepage": "https://github.com/publdaze/goorm-missions#readme"
+  "homepage": "https://github.com/publdaze/goorm-missions#readme",
+  "dependencies": {
+    "open-props": "^1.7.5"
+  }
 }
